# gnosis

./: .gitignore  README.md  pyproject.toml
docs/: excel_plan_v2.md
examples/: just_ocr.py  just_retriever.py  multi_doc_router.py  pipeline_yaml.py  with_langchain.py  with_langgraph.py
gnosis/: __init__.py  _vendor.py
gnosis/_impl/: __init__.py  dom_tree.py  element_classifier.py  ellipsis_handler.py  enricher.py  entity_graph.py  html_table_parser.py  index.py  multipage_stitcher.py  native_schema.py  ocr2_engine.py  pdf_positional_parser.py  pipeline.py  prompts.py  refiner.py  render.py  retry.py  table_normalizer.py  text_extractor.py  tree_index.py
gnosis/core/: __init__.py  config.py  context.py  events.py  pipeline.py  protocols.py  registry.py  schema.py
gnosis/indexers/: __init__.py  entity_graph_indexer.py  page_bm25_indexer.py  tree_index_indexer.py
gnosis/integrations/: __init__.py  langchain.py  langgraph.py
gnosis/parsers/: __init__.py  element_classifier_parser.py  ellipsis_handler_parser.py  multipage_stitcher_parser.py  ocr2_parser.py  ocr2_sglang_parser.py  pdfplumber_parser.py  table_normalizer_parser.py  text_extractor_parser.py
gnosis/presets/: __init__.py  smartsearch_v4.py
gnosis/rankers/: __init__.py  rrf.py  smart_truncate_ranker.py  weighted_merge.py
gnosis/retrievers/: __init__.py  agent_loop.py  hybrid_chatbot.py
gnosis/routers/: __init__.py  llm_flat_router.py
gnosis/shims/: __init__.py  smartsearch_v4_shim.py
gnosis/synthesizers/: __init__.py  chatbot_llm.py
tests/integration/: test_pipeline_e2e.py
(+14 files in other folders)
